# hello_actix

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  dump.sql  nginx.conf
migrations/: V1__init.sql  V2__add_indexed_generated_tsvector_column.sql
src/: config.rs  database.rs  errors.rs  handlers.rs  main.rs  models.rs  utils.rs
